# stm32-rfid-clone

./: .gitignore  .gittrees  CMakeLists.txt  README.md  com-viz.config.js  debug.c  debug.h  delay.c  interrupts.c  main.c  openocd.cfg  platform_config.h  pull-kicad-library.sh  push-kicad-library.sh  save-to-kicad-library.sh  stm32f10x_conf.h  time.c  time.h  update-from-kicad-library.sh  upload.sh  usb.c  usb.h
arduinoLogicAnalyzer/: arduinoLogicAnalyzer.ino
docs/: readCapture.eew
firmware/: CMakeLists.txt  build.sh  debug.c  debug.h  delay.c  delay.h  em4x05.c  em4x05.h  gcc_stm32.cmake  hw_config.c  hw_config.h  interrupts.c  main.c  openocd.cfg  openocd.telnet.cfg  platform_config.h  ring_buffer.c  ring_buffer.h  run-cmake.sh  run-tests.sh  run_tests.sh  stm32f10x_conf.h  sump.c  sump.h  system_stm32f10x.c  test_em4x05.c  time.c  time.h  upload.sh  usb.c  usb.h  usb_conf.h  usb_desc.c  usb_istr.c  usb_prop.c  usb_pwr.c
firmware/tests/: CuTest.h  em4x05_test.c  ring_buffer_test.c  tests.c
hardware/: 2014-01-14.gvp  RF.sch  fp-lib-table  stm32-rfid-clone.bom.csv  stm32-rfid-clone.cmp  stm32-rfid-clone.kicad_pcb  stm32-rfid-clone.lib  stm32-rfid-clone.lib.list  stm32-rfid-clone.mod  stm32-rfid-clone.mod.list  stm32-rfid-clone.net  stm32-rfid-clone.pro  stm32-rfid-clone.sch
hardware/2014-01-14/: stm32-rfid-clone.gbl  stm32-rfid-clone.gbo  stm32-rfid-clone.gbs  stm32-rfid-clone.gko  stm32-rfid-clone.gtl  stm32-rfid-clone.gto  stm32-rfid-clone.gts  stm32-rfid-clone.txt
mechanical/: AABattery.ipt  Assembly.iam  LED.ipt  circuitBoard.ipt  readerCase.ipt
